Fix css issues on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,8 +7,18 @@ body {
   margin: 0px;
   height: 100vh;
 }
+
+p {
+  padding: 0 4.5em;
+
+  @media screen and (max-width: 1024px) {
+    padding: 0 2.5em;
+  }
+}
+
 .leadspace {
   position: relative;
+  min-height: 350px;
 
   &__nav {
     &-container {
@@ -55,9 +65,6 @@ body {
 }
 .intro {
   background: #fff;
-  & p {
-    padding: 0 33%;
-  }
 }
 .presentation {
   background: #f5f5f5;
@@ -65,18 +72,22 @@ body {
     flex: 1 0 50%;
   }
   &_desc {
-    &_footer img {
-      max-height: 50px;
-    }
-    & p {
-      padding: 0 50px;
+    &_footer {
+      margin-bottom: 2em;
+      img {
+        max-height: 50px;
+      }
     }
   }
   &_demo video {
     max-width: 100%;
     border-radius: 4px;
   }
+  @media screen and (max-width: 1024px) {
+    flex-direction: column-reverse;
+  }
 }
+
 .footer {
   min-height: 60px;
 }
